--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div class="category-content" dir="rtl" lang="ar">
         <div class="menu-item"><span class="item-name"> لبنه</span><span class="item-price">100,000 LB</span></div>
         <div class="menu-item"><span class="item-name">جبنة </span><span class="item-price">200,000 LB</span></div>
-        <div class="menu-item"><span class="item-name"> حبش و جبنة</span><span class="item-price">200,000 LB</span></div>
+        <div class="menu-item"><span class="item-name"> حبش و جبنة</span><span class="item-price">250,000 LB</span></div>
         <div class="menu-item"><span class="item-name"> مقانق</span><span class="item-price">350,000 LB</span></div>
         <div class="menu-item"><span class="item-name">سجق</span><span class="item-price">350,000 LB</span></div>
         
@@ -76,13 +76,13 @@
       <div class="category-content" dir="rtl" lang="ar">
         <div class="menu-item"><span class="item-name"> زعتر</span><span class="item-price">100,000 LB</span></div>
         <div class="menu-item"><span class="item-name">جبنة </span><span class="item-price">200,000 LB</span></div>
+        <div class="menu-item"><span class="item-name"> كوكتيل</span><span class="item-price">150,000 LB</span></div>
         <div class="menu-item"><span class="item-name"> ثلاثة اجبان </span><span class="item-price">300,000 LB</span></div>
-        <div class="menu-item"><span class="item-name"> بندورة و بصل</span><span class="item-price">250,000 LB</span></div>
+        <div class="menu-item"><span class="item-name"> بندورة و بصل</span><span class="item-price">200,000 LB</span></div>
         <div class="menu-item"><span class="item-name">  بندورة و بصل مع جبنة</span><span class="item-price">250,000 LB</span></div>
         <div class="menu-item"><span class="item-name">حبش و جبنة</span><span class="item-price">250,000 LB</span></div>
-        <div class="menu-item"><span class="item-name"> كوكتيل</span><span class="item-price">150,000 LB</span></div>
         <div class="menu-item"><span class="item-name"> بيتزا</span><span class="item-price">400,000 LB</span></div>
-        <div class="menu-item"><span class="item-name"> شوكلاته</span><span class="item-price">400,000 LB</span></div>
+        <div class="menu-item"><span class="item-name"> شوكلاته</span><span class="item-price">200,000 LB</span></div>
       </div>
     </section>
 
@@ -143,7 +143,7 @@
         <div class="menu-item"><span class="item-name"> اندومي</span><span class="item-price">100,000 LB</span></div>
         <div class="menu-item"><span class="item-name"> صحن جزر</span><span class="item-price">150,000 LB</span></div>
         <div class="menu-item"><span class="item-name"> صحن مخلوطة</span><span class="item-price">150,000 LB</span></div>
-        <div class="menu-item"><span class="item-name"> صحن مخلوطة جبنة</span><span class="item-price">100,000 LB</span></div>
+        <div class="menu-item"><span class="item-name"> صحن مخلوطة صيني</span><span class="item-price">100,000 LB</span></div>
       </div>
     </section>
 
@@ -179,7 +179,7 @@
       <h2 class="category-heading">Argile</h2>
       <div class="category-content" dir="rtl" lang="ar">
         <div class="menu-item"><span class="item-name">تفاحتين وزارة</span><span class="item-price">400,000 LB</span></div>
-        <div class="menu-item"><span class="item-name">تفاحتين خلطة</span><span class="item-price">350,000 LB</span></div>
+        <div class="menu-item"><span class="item-name">تفاحتين بيت ورد</span><span class="item-price">350,000 LB</span></div>
         <div class="menu-item"><span class="item-name">حامض و نعنع</span><span class="item-price">500,000 LB</span></div>
         <div class="menu-item"><span class="item-name">تغيير راس</span><span class="item-price">200,000 LB</span></div>
         <div class="menu-item"><span class="item-name">منقل فحم</span><span class="item-price">250,000 LB</span></div>
