--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <header class="header">
     <div class="logo-placeholder" aria-label="Coffee shop logo">
       <!-- Replace this div with: <img src="your-logo.png" alt="Coffee Shop"> -->
-      <span class="logo-text"><a href="#all" class="nav-link" style="color: #d4af37;">بيت ورد</a></span>
+      <span class="logo-text"><a href="#all" class="nav-link" style="color: #d4af37;font-weight: 900;
+  font-size: 1.75rem;">بيت ورد</a></span>
     </div>
   </header>
 
