--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
   <header class="header">
     <div class="logo-placeholder" aria-label="Coffee shop logo">
       <!-- Replace this div with: <img src="your-logo.png" alt="Coffee Shop"> -->
-      <span class="logo-text">بيت ورد</span>
+      <span class="logo-text">بيت ورد </span>
     </div>
   </header>
 
   <!-- ========== FIXED NAVIGATION: Smooth scroll to sections ========== -->
   <nav class="nav" aria-label="Main menu">
     <a href="#all" class="nav-link">All Items</a>
+    <a href="#argile" class="nav-link">Argile</a>
     <a href="#sandwiches" class="nav-link">Sandwiches</a>
     <a href="#traboulsi" class="nav-link">Kaake Traboulsi</a>
     <a href="#shabata" class="nav-link">Shabata</a>
@@ -32,12 +33,23 @@
     <a href="#la2mashet" class="nav-link">La2mashet</a>
     <a href="#chocolate" class="nav-link">Chocolate</a>
     <a href="#dessert" class="nav-link">Dessert</a>
-    <a href="#argile" class="nav-link">Argile</a>
     <a href="#playstation" class="nav-link">PlayStation</a>
   </nav>
 
   <!-- ========== MAIN CONTENT: All category sections ========== -->
   <main id="all" class="main">
+
+    <!-- Argile section -->
+    <section id="argile" class="category section-argile">
+      <h2 class="category-heading">Argile</h2>
+      <div class="category-content" dir="rtl" lang="ar">
+        <div class="menu-item"><span class="item-name">تفاحتين وزارة</span><span class="item-price">400,000 LB</span></div>
+        <div class="menu-item"><span class="item-name">تفاحتين بيت ورد</span><span class="item-price">350,000 LB</span></div>
+        <div class="menu-item"><span class="item-name">حامض و نعنع</span><span class="item-price">400,000 LB</span></div>
+        <div class="menu-item"><span class="item-name">تغيير راس</span><span class="item-price">200,000 LB</span></div>
+        <div class="menu-item"><span class="item-name">منقل فحم</span><span class="item-price">250,000 LB</span></div>
+      </div>
+    </section>
     <!-- Sandwiches section -->
     <section id="sandwiches" class="category section-sandwiches">
       <h2 class="category-heading">Sandwiches </h2>
@@ -181,29 +193,15 @@
       </div>
     </section>
 
-    <!-- Argile section -->
-    <section id="argile" class="category section-argile">
-      <h2 class="category-heading">Argile</h2>
-      <div class="category-content" dir="rtl" lang="ar">
-        <div class="menu-item"><span class="item-name">تفاحتين وزارة</span><span class="item-price">400,000 LB</span></div>
-        <div class="menu-item"><span class="item-name">تفاحتين بيت ورد</span><span class="item-price">350,000 LB</span></div>
-        <div class="menu-item"><span class="item-name">حامض و نعنع</span><span class="item-price">400,000 LB</span></div>
-        <div class="menu-item"><span class="item-name">تغيير راس</span><span class="item-price">200,000 LB</span></div>
-        <div class="menu-item"><span class="item-name">منقل فحم</span><span class="item-price">250,000 LB</span></div>
-      </div>
-    </section>
-
     <!-- PlayStation section -->
     <section id="playstation" class="category section-playstation">
       <h2 class="category-heading">PlayStation</h2>
       <div class="category-content" dir="rtl" lang="ar">
         <div class="menu-item"><span class="item-name"> (مسكتين) ساعة</span><span class="item-price">400,000 LB</span></div>
-        <div class="menu-item"><span class="item-name"> (4 مسكات)  ساعة</span><span class="item-price">800,000 LB</span></div>
-        <div class="menu-item"><span class="item-name"> (مسكتين) ساعتان </span><span class="item-price">800,000 LB</span></div>
-        <div class="menu-item"><span class="item-name"> (4 مسكات) ساعتان </span><span class="item-price">1,600,000 LB</span></div>
-
+        <div class="menu-item"><span class="item-name"> (4 مسكات)  ساعة</span><span class="item-price">600,000 LB</span></div>
       </div>
     </section>
+    <div class="offertext"> حسم %١٠ لموظي مستشفى الرسول وطلاب جامعة المعارف</div>
   </main>
 
   <!-- Scroll padding so fixed nav doesn't cover section headings -->
