--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         
         <div class="menu-item"><span class="item-name"> مياه</span><span class="item-price">40,000 LB</span></div>
         <div class="menu-item"><span class="item-name"> كباية ثلج</span><span class="item-price">40,000 LB</span></div>
-        <div class="menu-item"><span class="item-name">  مياه غازية</span><span class="item-price">100,000 LB</span></div>
+        <div class="menu-item"><span class="item-name">  مياه غازية (Rim)</span><span class="item-price">100,000 LB</span></div>
         <div class="menu-item"><span class="item-name">بيبسي </span><span class="item-price">100,000 LB</span></div>
         <div class="menu-item"><span class="item-name"> ميراندا </span><span class="item-price">100,000 LB</span></div>
         <div class="menu-item"><span class="item-name"> 7 اب </span><span class="item-price">100,000 LB</span></div>
@@ -158,7 +158,7 @@
       <div class="category-content" dir="rtl" lang="ar">
         <div class="menu-item"><span class="item-name"> شيبس</span><span class="item-price">100,000 LB</span></div>
         <div class="menu-item"><span class="item-name"> اندومي</span><span class="item-price">100,000 LB</span></div>
-        <div class="menu-item"><span class="item-name"> صحن جزر</span><span class="item-price">150,000 LB</span></div>
+        <div class="menu-item"><span class="item-name">  صحن جزر و حامض</span><span class="item-price">150,000 LB</span></div>
         <div class="menu-item"><span class="item-name"> صحن مخلوطة</span><span class="item-price">150,000 LB</span></div>
         <div class="menu-item"><span class="item-name"> صحن مخلوطة صيني</span><span class="item-price">100,000 LB</span></div>
       </div>
